--- a/templates/logs.html
+++ b/templates/logs.html
@@ -30,14 +30,24 @@
         <!-- Main Content -->
         <div class="content">
             <div class="row">
+                <!--Log Viewer Content-->
                 <div class="col-md-6">
                     <h3>Log Viewer</h3>
-                    <textarea id="textEditor" class="form-control shell-log" rows="15" readonly placeholder="Current logs will be displayed here..."></textarea>
-                    <div class="input-group mb-3 mt-3">
-                        <input type="text" id="logSearchBox" class="form-control" placeholder="Search logs...">
-                        <button class="btn btn-secondary" id="searchButton">Search</button>
+                    <div id="textEditor" class="form-control shell-log mt-3">{{ logs|safe }}</div>
+                    
+                    <form method="POST" action="/logs" class="mt-3">
+                    <div class="input-group mb-3">
+                        <input type="text" id="logSearchBox" name="SearchTerm" class="form-control" placeholder="Enter search term...">
+                        <button type="submit" class="btn btn-secondary" id="searchButton">Search</button>
                     </div>
+                    </form>
+
+                    <!--Feback Message -->
+                    {% if message %}
+                    <div class="alert alert-info">{{ message }}</div>
+                    {% endif %}
                 </div>
+
                 <div class="col-md-6">
                     <h3>Previous Logs</h3>
                     <table class="table table-striped">
