--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -50,7 +50,7 @@
 
 /* Main Content - Prevent Overlap */
 .content {
-    background-color: rgb(250, 250, 250);
+    background-color: whitesmoke;
     margin-left: 30px; /* Enough space for sidebar when closed */
     padding: 20px;
     transition: margin-left 0.3s ease-in-out;
@@ -99,10 +99,8 @@
 
 #textEditor {
     white-space: pre-wrap;
-    max-height: 300px;
-    overflow-y: auto;
-    max-height: 300px; /* Restrict height */
-    overflow-y: auto;  /* Enable vertical scrolling */
+    max-height: 500px;
+    overflow-y: auto; /* Restrict height */ /* Enable vertical scrolling */
     background-color: black; /* Background color for readability */
     border: 1px solid #ddd; /* Add a border for structure */
     font-family: "Courier New", Courier, monospace; /* Match log styling */
